<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>g2m_poser</name>
  <version>1.0.0</version>
  <description>The ROS2 g2m_poser package</description>
  <maintainer email="ryo.watanabe@tier4.jp">Ryo Watanabe</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <!-- <depend>geo_pos_conv</depend> -->
  <depend>geographiclib</depend>
  <depend>geometry_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <!-- <depend>geodesy</depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
