
    <!-- /*  ===========================================================================
    Copyright 2022. The ICHTHUS Project. All Rights Reserved.
    Jaemin Lee (xoz1206@gmail.com),
    Youngjun Han (young@ssu.ac.kr)
    Vision System Laboratory, Soongsil University.
    added by ICHTHUS, Jaemin Lee on 20221026
    [Licensed under the MIT License]  
    ===========================================================================*/ -->
    
<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mission_manager_am</name>
  <version>0.1.0</version>
  <description>The mission_manager_am package</description>
  <maintainer email="xoz1206@naver.com">jaemin</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>autoware_cmake</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  
  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_cmake_ros</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <depend>autoware_auto_perception_msgs</depend>
  <depend>autoware_auto_system_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tier4_perception_msgs</depend>
  <depend>unique_identifier_msgs</depend>
  <depend>kiapi_msgs</depend>
  <depend>geographiclib</depend>
  <depend>autoware_auto_mapping_msgs</depend>
  <depend>lanelet2</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_io</depend>
  <depend>lanelet2_extension</depend>
  <depend>route_handler</depend>
  <depend>behavior_path_planner</depend>
  <depend>libopencv-dev</depend>
  <depend>mission_manager_msgs</depend>
  <depend>autoware_auto_common</depend>
  <depend>tier4_autoware_utils</depend>
  <depend>tf2_eigen</depend>
  <depend>euclidean_cluster</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>behavior_velocity_planner</depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
