<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>route_publisher_pm2</name>
  <version>0.1.0</version>
  <description>The mission_planner package</description>
  <maintainer email="sethut1224@gmail.com">taeho han</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>autoware_cmake</build_depend>

  <depend>autoware_auto_planning_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>lanelet2_extension</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>route_handler</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tier4_planning_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>mission_manager_msgs</depend>
  <depend>autoware_auto_perception_msgs</depend>
  <depend>behavior_path_planner</depend>
  <depend>libopencv-dev</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
